    function now accepts NULL as a second argument (output buffer).

  - Several items in libcw_debug.h are marked as deprecated. These items
    should be used only internally, during development of libcw, and should
    not be used by client code. They will be removed from the header in the
    future.

  - Declaration of cw_debug_print_flags() has been removed from libcw_debug.h
    header. The function was not defined in the library, so noone could have
    used the function.

  - Function cw_generator_set_tone_slope() from libcw.h is now marked as
    depecated. The function was/is unusable because there is no way that
    client code can pass a cw_gen_t variable as first argument.

  - Replacing some usages of double type with float type. There is very
    little (or maybe even nothing) in the library that would require
    precision or range of double.

  - Adding new function: cw_generator_remove_last_character().  The function
    removes last character enqueued to generator, it can be called multiple
    times to remove a group of characters. The function can be used e.g. in
    reaction to Backspace character pressed in User Interface.

    This functionality was implemented by Zoltan Csahok and merged here:
    https://sourceforge.net/p/unixcw/code/merge-requests/1/, but it has been
    rewritten a bit: removing of character must be explicit, through the
    function call.

    The initial solution was affecting which characters are classified by
    libcw as valid and which aren't, and it may have broken some legacy
    code. Also using Backspace to remove a character is a User Interface
    concept, which in cwcp and xcwcp is handled explicitly by UI code, not
    implicitly by library code. Therefore I decided to rework the initial
    solution and add the new function to library.

  - modifications to receiver functions:

    cw_receive_character(), cw_receive_representation(),
    cw_start_receive_tone() and cw_end_receive_tone() are now actually